tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__BinaryOperation__Addition.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "Addition",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "Addition",
      position: 5,
      line: 1,
      column: 6,
    ),
  ),
  data: BinaryOperation(BinaryOperation(
    left: Spanned(
      span: Span(
        start: Location(
          file_name: "Addition",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "Addition",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "Addition",
              position: 0,
              line: 1,
              column: 1,
            ),
            end: Location(
              file_name: "Addition",
              position: 1,
              line: 1,
              column: 2,
            ),
          ),
          data: "1",
        ),
        radix: 10,
      ))),
    ),
    operator: Spanned(
      span: Span(
        start: Location(
          file_name: "Addition",
          position: 2,
          line: 1,
          column: 3,
        ),
        end: Location(
          file_name: "Addition",
          position: 3,
          line: 1,
          column: 4,
        ),
      ),
      data: Addition,
    ),
    right: Spanned(
      span: Span(
        start: Location(
          file_name: "Addition",
          position: 4,
          line: 1,
          column: 5,
        ),
        end: Location(
          file_name: "Addition",
          position: 5,
          line: 1,
          column: 6,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "Addition",
              position: 4,
              line: 1,
              column: 5,
            ),
            end: Location(
              file_name: "Addition",
              position: 5,
              line: 1,
              column: 6,
            ),
          ),
          data: "2",
        ),
        radix: 10,
      ))),
    ),
  )),
))
