tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__BinaryOperation__Equality.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Spanned(
  span: Span(
    start: Location(
      file_name: "Equality",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "Equality",
      position: 6,
      line: 1,
      column: 7,
    ),
  ),
  data: BinaryOperation(BinaryOperation(
    left: Spanned(
      span: Span(
        start: Location(
          file_name: "Equality",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "Equality",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "Equality",
              position: 0,
              line: 1,
              column: 1,
            ),
            end: Location(
              file_name: "Equality",
              position: 1,
              line: 1,
              column: 2,
            ),
          ),
          data: "1",
        ),
        radix: 10,
      ))),
    ),
    operator: Spanned(
      span: Span(
        start: Location(
          file_name: "Equality",
          position: 2,
          line: 1,
          column: 3,
        ),
        end: Location(
          file_name: "Equality",
          position: 4,
          line: 1,
          column: 5,
        ),
      ),
      data: Equal,
    ),
    right: Spanned(
      span: Span(
        start: Location(
          file_name: "Equality",
          position: 5,
          line: 1,
          column: 6,
        ),
        end: Location(
          file_name: "Equality",
          position: 6,
          line: 1,
          column: 7,
        ),
      ),
      data: Literal(Integer(Integer(
        value: Spanned(
          span: Span(
            start: Location(
              file_name: "Equality",
              position: 5,
              line: 1,
              column: 6,
            ),
            end: Location(
              file_name: "Equality",
              position: 6,
              line: 1,
              column: 7,
            ),
          ),
          data: "2",
        ),
        radix: 10,
      ))),
    ),
  )),
))
