tantalum_parser/src/tests/snapshots/tantalum_parser__tests__expression__BinaryOperation__LogicalAnd.snap
---
source: tantalum_parser/src/tests/expression.rs
expression: result
snapshot_kind: text
---
Ok(Expression(
  span: Span(
    start: Location(
      file_name: "LogicalAnd",
      position: 0,
      line: 1,
      column: 1,
    ),
    end: Location(
      file_name: "LogicalAnd",
      position: 6,
      line: 1,
      column: 7,
    ),
  ),
  kind: BinaryOperation(
    left: Expression(
      span: Span(
        start: Location(
          file_name: "LogicalAnd",
          position: 0,
          line: 1,
          column: 1,
        ),
        end: Location(
          file_name: "LogicalAnd",
          position: 1,
          line: 1,
          column: 2,
        ),
      ),
      kind: IntegerLiteral(
        value: "1",
        radix: 10,
      ),
    ),
    operator: BinaryOperator(
      span: Span(
        start: Location(
          file_name: "LogicalAnd",
          position: 2,
          line: 1,
          column: 3,
        ),
        end: Location(
          file_name: "LogicalAnd",
          position: 4,
          line: 1,
          column: 5,
        ),
      ),
      kind: LogicalAnd,
    ),
    right: Expression(
      span: Span(
        start: Location(
          file_name: "LogicalAnd",
          position: 5,
          line: 1,
          column: 6,
        ),
        end: Location(
          file_name: "LogicalAnd",
          position: 6,
          line: 1,
          column: 7,
        ),
      ),
      kind: IntegerLiteral(
        value: "2",
        radix: 10,
      ),
    ),
  ),
))
